Java code revision completed