@@ -20,7 +20,7 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import schwarz.jobs.interview.coupon.core.domain.Coupon;
 import schwarz.jobs.interview.coupon.core.repository.CouponRepository;
-import schwarz.jobs.interview.coupon.core.services.model.Basket;
+import schwarz.jobs.interview.coupon.core.model.Basket;
 import schwarz.jobs.interview.coupon.web.dto.CouponDTO;
 import schwarz.jobs.interview.coupon.web.dto.CouponRequestDTO;
 
@@ -35,11 +35,12 @@ public class CouponServiceTest {
 
     @Test
     public void createCoupon() {
+        // Test description: This test verifies that the createCoupon method in couponService correctly saves a new coupon.
         CouponDTO dto = CouponDTO.builder()
-            .code("12345")
-            .discount(BigDecimal.TEN)
-            .minBasketValue(BigDecimal.valueOf(50))
-            .build();
+                .code("12345")
+                .discount(BigDecimal.TEN)
+                .minBasketValue(BigDecimal.valueOf(50))
+                .build();
 
         couponService.createCoupon(dto);
 
@@ -48,16 +49,16 @@ public class CouponServiceTest {
 
     @Test
     public void test_apply_coupon_method() {
-
+        // Test description: This test verifies the apply method of couponService with different basket values.
         final Basket firstBasket = Basket.builder()
-            .value(BigDecimal.valueOf(100))
-            .build();
+                .value(BigDecimal.valueOf(100))
+                .build();
 
         when(couponRepository.findByCode("1111")).thenReturn(Optional.of(Coupon.builder()
-            .code("1111")
-            .discount(BigDecimal.TEN)
-            .minBasketValue(BigDecimal.valueOf(50))
-            .build()));
+                .code("1111")
+                .discount(BigDecimal.TEN)
+                .minBasketValue(BigDecimal.valueOf(50))
+                .build()));
 
         Optional<Basket> optionalBasket = couponService.apply(firstBasket, "1111");
 
@@ -67,8 +68,8 @@ public class CouponServiceTest {
         });
 
         final Basket secondBasket = Basket.builder()
-            .value(BigDecimal.valueOf(0))
-            .build();
+                .value(BigDecimal.valueOf(0))
+                .build();
 
         optionalBasket = couponService.apply(secondBasket, "1111");
 
@@ -78,38 +79,39 @@ public class CouponServiceTest {
         });
 
         final Basket thirdBasket = Basket.builder()
-            .value(BigDecimal.valueOf(-1))
-            .build();
+                .value(BigDecimal.valueOf(-1))
+                .build();
 
         assertThatThrownBy(() -> {
             couponService.apply(thirdBasket, "1111");
-        }).isInstanceOf(RuntimeException.class)
-            .hasMessage("Can't apply negative discounts");
+        }).isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("Can't apply negative discounts");
     }
 
     @Test
     public void should_test_get_Coupons() {
-
+        // Test description: This test verifies that the getCoupons method returns the correct coupons based on the provided codes.
         CouponRequestDTO dto = CouponRequestDTO.builder()
-            .codes(Arrays.asList("1111", "1234"))
-            .build();
+                .codes(List.of("1111", "1234"))
+                .build();
 
-        when(couponRepository.findByCode(any()))
-            .thenReturn(Optional.of(Coupon.builder()
-                .code("1111")
-                .discount(BigDecimal.TEN)
-                .minBasketValue(BigDecimal.valueOf(50))
-                .build()))
-            .thenReturn(Optional.of(Coupon.builder()
-                .code("1234")
-                .discount(BigDecimal.TEN)
-                .minBasketValue(BigDecimal.valueOf(50))
-                .build()));
+        when(couponRepository.findByCode("1111"))
+                .thenReturn(Optional.of(Coupon.builder()
+                        .code("1111")
+                        .discount(BigDecimal.TEN)
+                        .minBasketValue(BigDecimal.valueOf(50))
+                        .build()));
+
+        when(couponRepository.findByCode("1234"))
+                .thenReturn(Optional.of(Coupon.builder()
+                        .code("1234")
+                        .discount(BigDecimal.TEN)
+                        .minBasketValue(BigDecimal.valueOf(50))
+                        .build()));
 
         List<Coupon> returnedCoupons = couponService.getCoupons(dto);
 
         assertThat(returnedCoupons.get(0).getCode()).isEqualTo("1111");
-
         assertThat(returnedCoupons.get(1).getCode()).isEqualTo("1234");
     }
 }
